# tellco-user-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
app/: Home.py
app/components/: charts.py  layout.py
app/pages/: 1_User_Overview.py  2_Engagement.py  3_Experience.py  4_Satisfaction.py  5_Business_Insights.py
app/services/: cache.py  pipeline.py
app/static/: styles.css  theme.js
docs/: README.md  analysis-tasks.md  architecture.md  dashboard.md  database.md  deployment.md  mlflow.md  setup.md  testing.md
docs/reports/: task1_streamlit_source_review.md
notebooks/: 01_user_overview_handsets.ipynb  02_user_overview_eda.ipynb  03_user_engagement.ipynb  04_user_experience.ipynb  05_user_satisfaction.ipynb
scripts/: feature_store.sql  load_database.sh
src/tellco_user_analytics/: config.py
src/tellco_user_analytics/analysis/: __init__.py  eda.py  engagement.py  experience.py  handsets.py  preprocessing.py  satisfaction.py  tracking.py  user_overview.py
src/tellco_user_analytics/data/: __init__.py  columns.py  loader.py
src/tellco_user_analytics/db/: connection.py  feature_store.py  mysql_export.py
tests/: test_config.py  test_dashboard.py  test_eda.py  test_engagement.py  test_experience.py  test_preprocessing.py  test_satisfaction.py  test_user_overview.py
