[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tellco-user-analytics"
version = "0.1.0"
description = "TellCo telecom user analytics — 10 Academy Week 1"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "plotly>=5.18",
    "pymysql>=1.1",
    "joblib>=1.3",
    "mlflow>=2.10",
]

[project.optional-dependencies]
notebooks = ["jupyter>=1.0", "ipykernel>=6.0"]
dashboard = ["streamlit>=1.32"]
dev = ["pytest>=7.0", "jupyter>=1.0", "ipykernel>=6.0", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]